<resources>
    <string name="app_name">Moviegami</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="api_key">a2ad4268d92eb984f96945ddfda011ca</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="trailer_text">"Trailer "</string>
    <string name="button_play">Play current trailer</string>
    <string name="overview">Overview</string>
    <string name="lorem_ipsum">Lorem Ipsum Dolor Sit Amed. Lorem Ipsum Dolor Sit Amed.</string>
    <string name="release_date_icon">Release date</string>
    <string name="user_rating_icon">User rating</string>
    <string name="short_lorem">Lorem</string>
    <string name="user_content_description">Review author</string>
    <string name="review_empty_string">There are no reviews available for this movie.</string>
    <string name="username_empty_string">Oops!</string>
    <string name="action_share">Share</string>
    <string name="action_next">Next</string>
    <string name="send_message">Hey! I just found this movie called %1$s.
        You should really it out, it\'s awesome! </string>
    <string name="trailer_appendix">Look at this trailer %1$s.</string>
</resources>
